change mail subject & body using template

--- a/src/main/resources/mail/email_body.html
+++ b/src/main/resources/mail/email_body.html
@@ -1,4 +1,12 @@
 <html>
-Hello
-<strong>$name$</strong> This is your order.
+Hai $name$,
+<br />
+<br /> Terima kasih sudah membeli buku digital di
+www.cupidocreative.com. Terlampir adalah buku yang sudah kamu pesan.
+Semoga membantu untuk perkembangan anak. Menyenangkan bagi kami saat
+bisa membantu satu anak lagi untuk berkembang.
+<br /> Jika masih ada kendala, kamu bisa menghubungi kami di
+cupido.creative@gmail.com
+<br />
+<br /> Selamat belajar kreatif.
 </html>
